client: proactively open sessions for potential export targets

For the case that mds exports non-auth caps to auth mds, the exporter
mds may not send cap export message. So client should not rely on cap
export message to open session for export target.

Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
Fixes: http://tracker.ceph.com/issues/24052